<resources>
    <string name="app_name">chewsit</string>
    <string name="cuisine_type">CUISINE_TYPE</string>
    <string name="no_food">NO_FOOD</string>
    <string name="yes_food">YES_FOOD</string>
    <string name="getting">Let\'s get</string>
    <string name="from">from</string>
    <string name="restaurant_name">RESTAURANT_NAME</string>
    <string name="map_it">MAP IT</string>
    <string name="pick_again">PICK AGAIN</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="lyft">Lyft</string>
    <string name="uber">Uber</string>
    <string name="chewsit">chewsit</string>

    <string name="google_maps_key">AIzaSyDdeM-u_LDxjt-9yS_58nPZqt_Jg_RnGCQ</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_no_internet">Houston, we have a problem!</string>
    <string name="onboard_intro">Hi! My name is Chewser. I\'m a food monster and I\'m here to help you use chewsit for the first time.</string>
    <string name="thanks">Whoa&#8230; You found me in my super secret snack spot! Mmmmmmmmmmm, I love eating with friends! Well&#8230; Since you\'re here scroll down more! I want to share with you the list of people we\'d like to thank. If you see any of them tell them Chewsy says \"Hai!\"</string>
    <string name="friends">Huge thanks to\&#8230;</string>
    <string name="creators">chewsit and Chewsy were created by Jordan Goldberg, David Stone, and Joey Mejias. We greatly appreciate the guidance and expertise of Drew Mahrt, Alan Caceres, Charlie Drews, and Chris Shum. Each of them is our Obi Wan Kenobi.</string>
</resources>
