<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.joeymejias.chewsit.RestaurantSelect">

    <ImageView
        android:layout_width="288dp"
        android:layout_height="288dp"
        android:id="@+id/cuisine_photo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@android:drawable/sym_def_app_icon"/>

    <TextView
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:id="@+id/cuisine_type"
        android:gravity="center"
        android:textSize="34sp"
        android:text="@string/cuisine_type"
        android:layout_below="@+id/cuisine_photo"
        android:layout_alignLeft="@+id/cuisine_photo"
        android:layout_alignStart="@+id/cuisine_photo"/>

    <Button
        android:layout_width="144dp"
        android:layout_height="108dp"
        android:text="@string/no_food"
        android:id="@+id/no_food"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="144dp"
        android:layout_height="108dp"
        android:text="@string/yes_food"
        android:id="@+id/yes_food"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/no_food"/>

</RelativeLayout>
